implement all-input-topics opt